<resources>
    <string name="app_name">Orderin</string>
    <string name="list">List</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="phone">Harga</string>
    <string name="id_kategori">ID Kategori</string>
    <string name="stok">Stok</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="pesan">Pesan</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Menu</string>
    <string name="title_activity_admin">Admin Dashboard</string>
    <string name="title_activity_waitress">Waitress Dashboard</string>
    <string name="title_activity_test">Test</string>
    <string name="title_home">Home</string>
    <string name="title_menu">Menu</string>
    <string name="title_order">Pesanan</string>
    <string name="title_profile">Profil</string>
    <string name="title_activity_user"></string>
    <string name="title_activity_user2"></string>
    <string name="title_activity_admin_table"></string>

    // Table
    <string name="id_meja">ID Meja</string>
    <string name="no_meja">No Meja</string>
    <string name="title_activity_admin_menu2">AdminMenuActivity2</string>
</resources>